# html_to_pdf

./: .gitignore  additional_notes.md  html_to_pdf.py  pyproject.toml
css/: affidavit.css  base.css  commissioner_block.css  header.css  paragraph.css  print.css  signature_block.css
templates/: affidavit.html.j2  draft_order.html.j2  founding_affidavit.html.j2  notice_of_filing.html.j2  notice_of_intention_to_oppose.html.j2  notice_of_motion.html.j2  notice_of_withdrawal.html.j2
templates/components/: base.html.j2  base_footer.html.j2  base_header.html.j2  commissioner_block.html.j2  macros.j2  signature_block.html.j2
test/: test_founding_affidavit.py
test/files/: founding_affidavit.json  simple.html  with_css.html  with_images.html
